# Mart

./: Makefile  README.md  logo.xcf  mart.toml  meson.build
docs/: mart.1  mart.toml.5
embeds/: logo.h
src/: about_main.c  about_main.h  album-art.c  album-art.h  compat.c  compat.h  config.c  config.h  gui_controlls.c  gui_controlls.h  imgui.c  imgui.h  main.c  state.c  state.h
